# git-utils

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: commit.cpp  commit.h  commitmessage.cpp  commitmessage.h  common.h  config.cpp  config.h  gitutil.cpp  gitutil.h  main.cpp  version.cpp  version.h
